src/objects/rs_Profile_Part__c.object
<CustomObject>
    <fields>
        <fullName>Association_Name__c</fullName>
        <description>Name of the professional association the employee belongs or is enrolled</description>
        <inlineHelpText>Full name of professional organization</inlineHelpText>
        <label>Association Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>Id of the attachment, if this Profile Part has an attachment.</description>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <description>Name of the attachment, if this Profile Part has an attachment.</description>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Agency__c</fullName>
        <description>Agency that handed out the Award</description>
        <inlineHelpText>Organization that presented the award</inlineHelpText>
        <label>Award Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Date__c</fullName>
        <description>Date award was given</description>
        <inlineHelpText>Date award was announced</inlineHelpText>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Award_Title__c</fullName>
        <description>Title of the Award</description>
        <inlineHelpText>Name of award, e.g. Young Engineer of the Year</inlineHelpText>
        <label>Award Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Description__c</fullName>
        <description>Short Description of the Certification</description>
        <label>Certification Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Title__c</fullName>
        <description>Name of Certification</description>
        <label>Name of Certification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>City or primary city during employment</inlineHelpText>
        <label>Employment City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <inlineHelpText>Employer</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Resume Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the employee currently work here?</description>
        <inlineHelpText>Are you currently working here?</inlineHelpText>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Certified__c</fullName>
        <description>Date the employee was certified</description>
        <label>Date Certified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent_for_Review__c</fullName>
        <description>Date/Time when this profile part was sent to CM Review</description>
        <label>Date Time Sent for Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date the Training took place</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Specialty__c</fullName>
        <inlineHelpText>Major field of study as recorded on diploma</inlineHelpText>
        <label>Degree Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <inlineHelpText>Completed degree or qualification, e.g., BS, BSc</inlineHelpText>
        <label>Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date employment ended with this employer</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date License/Registration expires</description>
        <inlineHelpText>Date the license expires or will be renewed</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Locale__c</fullName>
        <description>The locale of the user that initially saves a profile part</description>
        <label>Initial Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Country__c</fullName>
        <inlineHelpText>Country where school is located</inlineHelpText>
        <label>Institution Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <inlineHelpText>School that awarded this degree</inlineHelpText>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <description>Date License/Registration was issued</description>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <inlineHelpText>Last job title at this employer</inlineHelpText>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Level__c</fullName>
        <inlineHelpText>Select skill level related to the skill</inlineHelpText>
        <label>Language Level</label>
        <picklist>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Skill__c</fullName>
        <inlineHelpText>Select skill (read, write, or speak) associated with this particular language</inlineHelpText>
        <label>Language Skill</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>Select language</inlineHelpText>
        <label>Resume Language</label>
        <picklist>
            <picklistValues>
                <fullName>Abkhaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akan Twi (Ghana)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amharique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aragonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aramaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aramaic Assyrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashanti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avestan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aymara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahasa - Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahasa - Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bambara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bashkir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihari Languages</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Registration_Country__c</fullName>
        <inlineHelpText>Country that issued the license, if applicable</inlineHelpText>
        <label>License / Registration Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Registration_Name__c</fullName>
        <description>Name of License/Registration for this record</description>
        <inlineHelpText>e.g., Professional Engineer</inlineHelpText>
        <label>License / Registration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Since__c</fullName>
        <description>Date when employee first became a member of the professional association</description>
        <inlineHelpText>Year first became a member</inlineHelpText>
        <label>Member Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of the Training Event that employee attended</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Part</label>
        <referenceTo>rs_Profile_Part__c</referenceTo>
        <relationshipLabel>Previous Profile Parts</relationshipLabel>
        <relationshipName>Previous_Profile_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Output_on_Resume__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether this Resume part is printed on Resume</description>
        <inlineHelpText>Check if this should be included when a resume is generated</inlineHelpText>
        <label>Output on Resume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Sequence__c</fullName>
        <inlineHelpText>Sequence of the part in the Skills and Qualifications view</inlineHelpText>
        <label>Part Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Held_From__c</fullName>
        <inlineHelpText>Date position began</inlineHelpText>
        <label>Held From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Held_To__c</fullName>
        <inlineHelpText>Date position ended</inlineHelpText>
        <label>Held To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Employee&apos;s position within the Professional Association</description>
        <inlineHelpText>Position in organization, e.g., branch president</inlineHelpText>
        <label>Association Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Part</label>
        <referenceTo>rs_Profile_Part__c</referenceTo>
        <relationshipLabel>Next Profile Parts</relationshipLabel>
        <relationshipName>Next_Profile_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_Author__c</fullName>
        <description>Author of the Publication article</description>
        <inlineHelpText>Co-authors, if any (if it&apos;s included in your profile, you are assumed to be an author)</inlineHelpText>
        <label>Publication Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <description>Date article was published</description>
        <inlineHelpText>The date the article was published or presentation presented</inlineHelpText>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <description>Title of the article in the Publication</description>
        <inlineHelpText>Title of the publication or presentation</inlineHelpText>
        <label>Article Title/Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <description>Name of the Publication article is published</description>
        <inlineHelpText>Where the article was published or presentation was given</inlineHelpText>
        <label>Name of Publication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Company_Name__c</fullName>
        <description>Reference&apos;s Company</description>
        <inlineHelpText>The company your reference is employed by</inlineHelpText>
        <label>Reference Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Date_Last_Checked__c</fullName>
        <inlineHelpText>Date reference was last checked</inlineHelpText>
        <label>Reference Date Last Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Email__c</fullName>
        <description>Reference&apos;s Email</description>
        <inlineHelpText>Best email address to reach your reference</inlineHelpText>
        <label>Reference Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reference_First_Name__c</fullName>
        <description>Reference&apos;s First Name</description>
        <inlineHelpText>Your reference&apos;s first name</inlineHelpText>
        <label>Reference First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Last_Name__c</fullName>
        <description>Reference&apos;s Last Name</description>
        <inlineHelpText>Your reference&apos;s last name</inlineHelpText>
        <label>Reference Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Phone__c</fullName>
        <description>Reference&apos;s Phone Number</description>
        <inlineHelpText>The best phone number to reach your reference</inlineHelpText>
        <label>Reference Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Title__c</fullName>
        <description>Reference&apos;s title</description>
        <inlineHelpText>The position of your reference in their company</inlineHelpText>
        <label>Reference Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <description>License/Registration&apos;s number</description>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Name__c</fullName>
        <inlineHelpText>Enter name as it should appear on the resume.</inlineHelpText>
        <label>Resume Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Title__c</fullName>
        <label>Resume Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF254_Discipline__c</fullName>
        <label>SF254 Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acoustical Noise Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeronautical Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft/Marine Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthropologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archaeologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arctic Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botanist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Rehabilitation Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD CADD Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramic Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combustion Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Processing Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF254_Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF330_Discipline__c</fullName>
        <label>SF330 Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Acoustical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerial Photographer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeronautical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archaeologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADD Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartographer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Programmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Inspector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrosion Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Engineer/Estimator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Scientist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Protection Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensic Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation/Geotechnical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geodetic Surveyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Information System Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geologist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF330_Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill_Area__c</fullName>
        <description>Describes what area an employee&apos;s skills lie in.</description>
        <inlineHelpText>Skill area, e.g., Water or Bridges</inlineHelpText>
        <label>Skill Area</label>
        <picklist>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosolids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Oxidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change Adapation &amp; Resiliency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal &amp; Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Heat &amp; Power (CHP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Engagement &amp; Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Bridges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contaminated Sediments &amp; Waterways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution &amp; Collection Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Management &amp; Collaboration Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics and Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS Auditing &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS Management Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill_Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <description>Highest level to which employee was involved in the listed skill.</description>
        <inlineHelpText>Highest level to which employee was involved in the listed skill.</inlineHelpText>
        <label>Skill Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 – Fundamental Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 – Novice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 – Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 – Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 – Master</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <description>Exact skill the employee has.</description>
        <inlineHelpText>Select or enter a skill</inlineHelpText>
        <label>Skill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>Speciality of employee skill.</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Specialty 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date employment started with this employer</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province where License was obtained</description>
        <inlineHelpText>State or Province that issued the license, if applicable</inlineHelpText>
        <label>License / Registration State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>